        
          Fixed a bug in detecting External connection and Internal 
          connections. Earlier when an external component is detected,
          not *all* connections associated with this components are
          purged from the to-be-removed connections list. Added another
          helper method <purge_connections> to accomplish this task.

Fri Apr  7 03:55:46 UTC 2006  Gan Deng  <gan.deng@vanderbilt.edu>

        * DAnCE/NodeApplicationManager/NodeApplicationManager_Impl.cpp

          Fixed a bug when redeploying components using the same set
          of NodeManagers. Earlier when destroying applications or
          components, internal components and external/shared components
          are not all unbinded from the map, which causes duplicate
          instance exception thrown.
        
Thu Apr  6 16:01:30 UTC 2006  Jeff Parsons <j.parsons@vanderbilt.edu>

        * CCF/CCF/CompilerElements/TokenStream.hpp:

          Added empty virtual destructor to template base class, to
          eliminate bogus GCC warnings.

Thu Apr  6 15:22:31 UTC 2006  Gan Deng  <gan.deng@vanderbilt.edu>

        * ciaosvcs/Events/CIAO_Events.mpc

          Fixed linking errors on WinXP_BCB6_Pro_Dynamic_Release build.

        * examples/Hello/descriptors_shared_components/deploymentplan.cdp
        * examples/Hello/descriptors_shared_components/deploymentplan_shared_components.cdp

          Modified to illustrate the shared components scenario.

Thu Apr  6 14:54:59 UTC 2006  Gan Deng  <gan.deng@vanderbilt.edu>

        * ciaosvcs/Events/CIAO_EventService_Factory_impl.h
        * ciaosvcs/Events/CIAO_RTEC/CIAO_RTEvent.h

          Some cosmestic changes.

Thu Apr  6 08:20:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/CCM_Component.idl:
          Removed the forward declaration of IRObject and just include
          ciao/CCM_Component.idl. The forward declaration is causing